# Faraday-liionsden

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DB.json  Dockerfile  Main.tf  README.md  Untitled.ipynb  battDB_UML_Class_Diagram.graphml  docker-compose.yml  fixtures.py  harvester.py  init.sh  install_ssh.sh  manage.py  pre-commit-config.yaml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  reset_db.sh  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  file-upload-error.md
.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  publish.yml
_other/: _harvester.py  harvester.py
_other/harvester/: __init__.py  config.py  utils.py
battDB/: admin.py  apps.py  custom_layout_object.py  filters.py  forms.py  initial_device_types.py  initial_parsers.py  migration_dummy.py  models.py  plots.py  serializers.py  tables.py  tests.py  urls.py  utils.py  views.py
battDB/migrations/: 0001_initial.py  0002_alter_parser_file_format.py  0002_auto_20200804_1838.py  0002_auto_20211006_0937.py  0002_initial.py  0003_alter_uploadedfile_file.py  0003_auto_20211011_1315.py  0003_equipment_type.py  0003_initial.py  0004_alter_parser_file_format.py  0004_auto_20211014_1305.py  0004_auto_20211015_1354.py  0004_equipmenttype_manufacturer.py  0005_auto_20200804_1856.py  0005_auto_20211015_0916.py  0005_merge_20211022_0731.py  0006_auto_20211104_1630.py  0006_experimentalapparatus_photo.py  0007_auto_20200804_1915.py  0007_devicespecification_config.py  0008_experimentalapparatus_cellconfig.py  0008_remove_experiment_protocol.py  0009_auto_20200804_1920.py  0009_auto_20211117_0942.py  0010_alter_batch_serialno.py  0010_experiment_processed_data_file.py  0011_alter_batch_serialno.py  0011_auto_20200804_1926.py  0012_alter_batch_serialno.py  0012_cell_separator.py  0013_alter_batch_serialno.py  0013_auto_20200805_1146.py  0014_alter_batch_serialno.py  0014_auto_20200805_1214.py  0015_auto_20200812_1541.py  0015_devicespecification_spec_file.py  0016_alter_devicespecification_config_and_more.py  (+224 more)
common/: admin.py  apps.py  filters.py  forms.py  models.py  signals.py  utils.py  validators.py  views.py
dfndb/: admin.py  apps.py  filters.py  forms.py  initial_parameters.py  initial_units.py  models.py  serializers.py  tables.py  urls.py  validators.py  views.py
django-battdb/: .gitignore  DB.json  DB.sql  README.md  backup.sh  harvester-config.yaml  harvester.py  requirements.txt  settings.py  wsgi.py
djongoTest/: DB.json  DB.sql  README.md  backup.sh  manage.py  requirements.txt
doc/: harvester_class_diagram.graphml  harvester_flowchart.graphml
docker/: init.sh
docs/: README.md
dummy_data/: README.md  dummy_data.json  dummydata.json  dummydata_battDB_common_dfndb.json  dummydata_simple.json  generate_data.py  generate_users.py
harvester/: __init__.py  config.py  harvester.py  harvester_flowchart.graphml
liionsden/: context_processors.py  router.py  settings.py  urls.py  views.py  wsgi.py
management/: admin.py  apps.py  custom_azure.py  forms.py  initial_data.py  models.py  signals.py  urls.py  views.py
parsers/: __init__.py  biologic_parser.py  maccor_parser.py  mappings.py  parser.py  parser_base.py
parsing_engines/: __init__.py  biologic_engine.py  biologic_mappings.py  generic_mappings.py  maccor_engine.py  maccor_mappings.py  mappings.py  parsing_engines_base.py
scripts/: init.sh  install_ssh.sh
templates/: base.html  generic_list.html  generic_object.html  header.html  home.html
tests/: fixtures.py
(+473 files in other folders)
